--- a/index.html
+++ b/index.html
@@ -14,55 +14,55 @@
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 <div class="cards-container">
     <div class="card">
         <div class="front"><p>Georgia</p></div>
-        <div class="back"><p>dupka13</p></div>
+        <div class="back"><p>Tbilisi</p></div>
     </div>
 </div>
 
